--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:yunlong.liang@essex.ac.uk"}
   - {title: Github, icon: github, url: "https://github.com/lungwan"}
-  - {title: X, icon: x, url: "https://x.com/YunlongLiang98"}
+  - {title: Twitter, icon: twitter, url: "https://x.com/YunlongLiang98"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
